# projects

./: README.md  requirements.txt
ach_eft_process_flow/: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  service.db
ach_eft_process_flow/ach_ingestion_service/app/: main.py  models.py  schemas.py
ach_eft_process_flow/bank_statement_ingestion_service/: Dockerfile
ach_eft_process_flow/bank_statement_ingestion_service/app/: main.py  models.py  schemas.py
ach_eft_process_flow/batch_builder_service/app/: main.py
ach_eft_process_flow/claim_system_adapter/app/: main.py  schemas.py
ach_eft_process_flow/ledger_service/app/: main.py  models.py  schemas.py
ach_eft_process_flow/pairing_service/app/: main.py  models.py
ach_eft_process_flow/payout_service/app/: main.py  schemas.py
ach_eft_process_flow/provider_ledger_service/: Dockerfile
ach_eft_process_flow/provider_ledger_service/app/: main.py  schemas.py
ach_eft_process_flow/reconciliation_service/app/: main.py
ach_eft_process_flow/remittance_ingestion_service/: Dockerfile
ach_eft_process_flow/remittance_ingestion_service/app/: db.py  main.py  models.py  schemas.py
ach_eft_process_flow/tests/: test_ach_ingestion_service.py  test_bank_statement_ingestion_service.py  test_batch_builder_service.py  test_claim_system_adapter_service.py  test_integration_full_flow.py  test_ledger_service.py  test_pairing_service.py  test_payout_service.py  test_provider_ledger_service.py  test_reconciliation_service.py  test_remittance_ingestion_service.py  test_shared_event_schemas.py
(+153 files in other folders)
